--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <p>
                         Номер кошелька
                     </p>
-                    <input type="text" class="input numer-yandex">
+                    <input type="text" class="input wallet">
                     <p>
                         Имя
                     </p>
@@ -373,8 +373,8 @@
                     <input type="text" class="input surname">
                 </div>
                 <div class="modal-footer d-flex align-items-center justify-content-around">
-                    <button type="button" class="button button-modal " data-dismiss="modal">Отменить</button>
-                    <button type="button" class="button button-modal">Обменять</button>
+                    <button type="button" class="button button-modal button-cancel">Отменить</button>
+                    <button type="button" class="button button-modal button-modal-change">Обменять</button>
                 </div>
             </div>
 
