--- a/index.html
+++ b/index.html
@@ -361,15 +361,12 @@
 
                 </div>
                 <div class="modal-body">
-                    <p>
-                        Номер кошелька
-                    </p>
-                    <input type="text" class="input wallet">
-                    <p>
-                        Имя
-                    </p>
+                    <h5 class="modal-title"></h5>
+                    <p class="modal-text">Номер кошелька </p>
+                    <input type="number" class="input wallet">
+                    <p class="modal-text">Имя</p>
                     <input type="text" class="input name">
-                    <p>Фамилия</p>
+                    <p class="modal-text">Фамилия</p>
                     <input type="text" class="input surname">
                 </div>
                 <div class="modal-footer d-flex align-items-center justify-content-around">
