--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Быстрый обмен без скрытых комиссий
         </h3>
 
-        <div class="container calc-container">
+        <div class="container calc-container" id='calc'>
 
             <div class="row d-flex justify-content-center calc-change">
                 <div class="calc-give col-xl-4 col-md-8 col-sm-12">
@@ -300,7 +300,7 @@
                 <div class="col-lg-6 col-md-12 exchange ">
                     <h3 class="exchange-title ">Будем рады предоставить Вам качественный обмен валют на нашем сервисе!</h3>
                     <p class="exchange-subtitle ">Начните обмен прямо сейчас</p>
-                    <button class="button-exchange ">Обменять</button>
+                    <button href="#calc" class="button-exchange scroll-link ">Обменять</button>
                 </div>
             </div>
         </div>
